<resources>
    <string name="app_name">USTHB 9raya</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="others">Others</string>
    <string name="autres">Autres</string>
    <string name="youtube">Youtube lien</string>
    <string name="examens">Examens</string>
    <string name="td">TD</string>
    <string name="tp">TP</string>
    <string name="cours">Cours</string>
    <string name="full_name">Nom Complet</string>
    <string name="email">Email</string>
    <string name="faculty">Faculté</string>
    <string name="module">Module</string>
    <string name="type">type</string>
    <string name="comment">Commentaire</string>
    <string name="contribute">Contribuer</string>
    <string name="desc_favorite_module">Add to favorites</string>
    <string name="propos_de_usthb_9raya">À Propos de USTHB 9raya</string>
    <string name="ajouter_un_fichier">Ajouter Des Fichier</string>
    <string name="changer_le_fichier">Changer Les Fichier</string>
    <string name="youtube_links">Liens YouTube</string>
    <string name="youtube_link">Entrez le lien vidéo/playlist</string>
    <string name="lien_youtube">Lien Youtube</string>

    <string-array name="faculties">
        <item value="Faculté D'informatique">Informatique </item>
        <item value="Faculté De Chimie">Chimie</item>"
        <item value="Faculté De Chimie">Physique</item>"
        <item value="Faculté De Chimie">Mathématiques</item>"
        <item value="Faculté De Chimie">Génie Mécanique Et Génie Des Procédés</item>"
        <item value="Faculté De Chimie">Génie Électrique</item>"
        <item value="Faculté De Chimie">Génie Civil</item>"
        <item value="Faculté De Chimie">Science De La Terre</item>
        <item value="Activity Extrascolaires">Activity Extrascolaires</item>
    </string-array>

    <string-array name="type">
        <item value="tp">TP</item>
        <item value="td">TD</item>
        <item value="others">Autres</item>
        <item value="Courses">Cours</item>
        <item value="exams">Examens</item>
        <item value="youtube">Lien Youtube</item>
    </string-array>
</resources>