<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/linear_module"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/bck_textview"
        android:padding="8dp"
        android:layout_marginBottom="12dp"
        android:visibility="visible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bck_ic_design_module"
            android:src="@drawable/ic_diploma"
            android:padding="10dp" />

        <TextView
            android:id="@+id/text_view_module"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:paddingStart="8dp"
            android:minHeight="48dp"
            android:gravity="center_vertical"
            android:text=" module name"
            android:textStyle="normal"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:scrollHorizontally="true"
            android:layout_gravity="center_vertical"
            android:freezesText="true"/>

        <ImageView
            android:id="@+id/ic_favorite_module"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_heart"
            android:padding="8dp"
            android:contentDescription="@string/desc_favorite_module" />


        <ImageView
            android:id="@+id/ic_arrow_module"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_arrow_right"
            android:paddingEnd="8dp">
        </ImageView>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/submodule_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/bck_textview"
            android:padding="8dp"
            android:layout_marginBottom="12dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/ic_course_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bck_ic_design_td_tp_course"
                android:src="@drawable/ic_class_education"
                android:padding="10dp" />

            <TextView
                android:id="@+id/text_course_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:paddingStart="8dp"
                android:gravity="center_vertical"
                android:text="@string/cours"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/ic_arrow_course"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_arrow_right"
                android:paddingEnd="8dp">
            </ImageView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_tp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/bck_textview"
            android:padding="8dp"
            android:layout_marginBottom="12dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/ic_tp_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bck_ic_design_td_tp_course"
                android:src="@drawable/ic_education_maths"
                android:padding="10dp" />

            <TextView
                android:id="@+id/text_tp_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:paddingStart="8dp"
                android:gravity="center_vertical"
                android:text="@string/tp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/ic_arrow_tp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_arrow_right"
                android:paddingEnd="8dp">
            </ImageView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_td"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/bck_textview"
            android:padding="8dp"
            android:layout_marginBottom="12dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/ic_td_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bck_ic_design_td_tp_course"
                android:src="@drawable/ic_school_book"
                android:padding="10dp" />

            <TextView
                android:id="@+id/text_td_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:paddingStart="8dp"
                android:gravity="center_vertical"
                android:text="@string/td"
                android:textStyle="normal"/>

            <ImageView
                android:id="@+id/ic_arrow_td"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_arrow_right"
                android:paddingEnd="8dp">
            </ImageView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_exams"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/bck_textview"
            android:padding="8dp"
            android:layout_marginBottom="12dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/ic_exams_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bck_ic_design_td_tp_course"
                android:src="@drawable/ic_exam"
                android:padding="10dp" />

            <TextView
                android:id="@+id/text_exams_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:paddingStart="8dp"
                android:gravity="center_vertical"
                android:text="@string/examens"
                android:textStyle="normal"/>

            <ImageView
                android:id="@+id/ic_arrow_exams"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_arrow_right"
                android:paddingEnd="8dp">
            </ImageView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_others"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/bck_textview"
            android:padding="8dp"
            android:layout_marginBottom="12dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/ic_others_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bck_ic_design_td_tp_course"
                android:src="@drawable/ic_others"
                android:padding="10dp" />

            <TextView
                android:id="@+id/text_others_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:paddingStart="8dp"
                android:gravity="center_vertical"
                android:text="@string/autres"
                android:textStyle="normal"/>

            <ImageView
                android:id="@+id/ic_arrow_others"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_arrow_right"
                android:paddingEnd="8dp">
            </ImageView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_youtube"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/bck_textview"
            android:padding="8dp"
            android:layout_marginBottom="12dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/ic_youtube_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bck_ic_design_td_tp_course"
                android:src="@drawable/ic_youtube"
                android:padding="10dp" />

            <TextView
                android:id="@+id/text_youtube_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:paddingStart="8dp"
                android:gravity="center_vertical"
                android:text="@string/youtube"
                android:textStyle="normal"/>

            <ImageView
                android:id="@+id/ic_arrow_youtube"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_arrow_right"
                android:paddingEnd="8dp">
            </ImageView>
        </LinearLayout>

    </LinearLayout>




</androidx.appcompat.widget.LinearLayoutCompat>
